Update to Play 2.5 and Silhouette 4

--- a/app/views/auth/changePassword.scala.html
+++ b/app/views/auth/changePassword.scala.html
@@ -6,7 +6,7 @@
 	@passwordsForm.globalError.map { error =>
 		@tags.alert(error.message, "error")
 	}
-	@b3.form(routes.Auth.handleChangePassword) {
+	@b3.formCSRF(routes.Auth.handleChangePassword) {
 		<fieldset>
 			<legend>@Messages("changepass.title")</legend>
 			@b3.password( passwordsForm("current"), '_hiddenLabel -> Messages("changepass.field.current"), 'placeholder -> Messages("changepass.field.current"), 'autofocus -> true )
