--- a/app/views/auth/signUp.scala.html
+++ b/app/views/auth/signUp.scala.html
@@ -3,7 +3,7 @@
 @import controllers.routes
 @default("Sign Up") {
 	@tags.alertFromRequest(request, "error")
-	@b3.form(routes.Auth.handleStartSignUp) {
+	@b3.formCSRF(routes.Auth.handleStartSignUp) {
 		<fieldset>
 			<legend>@Messages("signup.title")</legend>
 			@b3.text(signUpForm("firstName"), '_label -> Messages("field.firstname"), 'placeholder -> "John", 'autofocus -> true )
