--- a/app/views/errors/accessDenied.scala.html
+++ b/app/views/errors/accessDenied.scala.html
@@ -1,5 +1,5 @@
-@()(implicit loggedUser: Option[User], request: RequestHeader, messages: Messages)
-@views.html.templates.default("Access Denied", loggedUser) {
+@()(implicit request: RequestHeader, messages: Messages)
+@views.html.templates.default("Access Denied", None) {
 	@tags.alertFromRequest(request, "error")
 	<h1 class="text-primary">@Messages("denied.title")</h1>
 	<h3 class="text-danger">@Messages("denied.text")</h3>
