--- a/app/views/errors/error.scala.html
+++ b/app/views/errors/error.scala.html
@@ -1,5 +1,5 @@
 @(request: RequestHeader, error: play.api.UsefulException)(implicit messages: Messages)
-@views.html.templates.main("ADMIN Oops, an error occurred") {
-	<h1>ADMIN @Messages("error.unknown.title")</h1>
+@views.html.templates.main("Oops, an error occurred") {
+	<h1>@Messages("error.unknown.title")</h1>
 	<p>@Messages("error.unknown.text", error.id)</p>
 }
