--- a/app/views/errors/notFound.scala.html
+++ b/app/views/errors/notFound.scala.html
@@ -1,5 +1,5 @@
 @(request: RequestHeader)(implicit messages: Messages)
-@views.html.templates.main("ADMIN Handler Not Found") {
-  <h1>ADMIN @Messages("error.notfound.title")</h1>
+@views.html.templates.main("Handler Not Found") {
+  <h1>@Messages("error.notfound.title")</h1>
 	<p>@Messages("error.notfound.text", request.method + " " + request.uri)</p>
 }
